# guessrush

./: .editorconfig  .gitignore  AGENTS.md  CODEX_START_PROMPT.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202605250001_initial_room_lobby.py  202605260001_guess_event_idempotency.py
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/: deps.py  display.py  gameplay.py  health.py  lobby.py  rooms.py
backend/app/models/: __init__.py  base.py  card.py  enums.py  event.py  member.py  room.py  team.py  turn.py
backend/app/realtime/: __init__.py  events.py  server.py
backend/app/schemas/: __init__.py  common.py  gameplay.py  lobby.py  realtime.py  room.py
backend/app/seed/: starter_cards.json
backend/app/services/: __init__.py  auth_service.py  deck_service.py  errors.py  game_engine.py  room_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_gameplay_m3.py  test_health.py  test_rooms_join.py
docs/: DECISIONS.md  PRODUCT_SPEC.md  TEST_MATRIX.md  UI_REVIEW.md
frontend/: .dockerignore  .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.node.json  vitest.config.mjs
frontend/e2e/: milestone1.spec.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/scripts/: run-vitest.mjs
frontend/src/: main.tsx  (+1 more)
scripts/: dev.ps1  dev.sh  open-four-players.ps1  run-raspberry-pi.sh  setup-raspberry-pi.sh
(+60 files in other folders)
